// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner tests Should be rendered not transparent and without text 1`] = `
.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 1000;
  margin: -50px 0px 0px -50px;
  max-width: 140px;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;
  background-color: rgba(253,253,253,1);
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <div>
      <i
        class="fas fa-10x fa-spin fa-cog"
      />
    </div>
    0
  </div>
</div>
`;

exports[`Spinner tests Should be rendered transparent 1`] = `
.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 1000;
  margin: -50px 0px 0px -50px;
  max-width: 140px;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;
  background-color: rgba(253,253,253,0.3);
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <div>
      <i
        class="fas fa-10x fa-spin fa-cog"
      />
    </div>
    0
  </div>
</div>
`;

exports[`Spinner tests Should be rendered with text 1`] = `
<h3
  class="ant-typography ant-typography-danger"
>
  Some text
</h3>
`;
